// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Number Default 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="number1"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          id="number1"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value={0}
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number Disabled 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #EBEBE8;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #EBEBE8;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          disabled={true}
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step="0.25"
          type="number"
          value="152.25"
        />
        <button
          className="c7"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number Error if value is less than 1 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.6666666666666667;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #FF1900;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          aria-invalid={true}
          className="c8"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step="1"
          type="number"
          value={0}
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
  <div>
    <span
      className="c9"
    >
      <div
        className="c10"
      >
        Error: 
      </div>
      Number needs to be greater than 0
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number Extra info below 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.6666666666666667;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value={0}
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
  <div>
    <span
      className="c9"
    >
      Use wisely this space
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number Extra info with error 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.6666666666666667;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #FF1900;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          aria-invalid={true}
          className="c8"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value={0}
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
  <div>
    <span
      className="c9"
    >
      <div
        className="c10"
      >
        Error: 
      </div>
      Enter text
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Number Hidden label 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={true}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value={0}
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number Success 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #00D200;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          success={true}
          type="number"
          value={0}
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With all actions 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          id="insert-unique-id"
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="number"
          value={0}
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With default value (Uncontrolled behaviour) 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step="0.1"
          type="number"
          value="15.2"
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With max and min (Uncontrolled behaviour) 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          id="insert-unique-id"
          max="20"
          min="10"
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value="12"
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With small step (Uncontrolled behaviour) 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step="0.005"
          type="number"
          value="15.200"
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots Molecules | Input / Number With value (Controlled behaviour) 1`] = `
.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c4 {
  position: relative;
  background-color: #ffffff;
  height: 40px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
  box-sizing: border-box;
}

.c7 {
  width: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 100%;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7:active {
  background-color: #0046FF;
  color: #FFFFFF;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 8px;
  width: 100%;
  height: 100%;
  margin: 0 -1px;
  box-sizing: border-box;
  z-index: 1;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
    htmlFor="insert-unique-id"
  >
    <span
      className="c2"
    >
      Label
    </span>
  </label>
  <span
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          className="c8"
          id="insert-unique-id"
          min={0}
          onChange={[Function]}
          onKeyDown={[Function]}
          step={1}
          type="number"
          value="11"
        />
        <button
          className="c7"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
    </div>
  </span>
</div>
`;
